--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -524,3 +524,41 @@ label {
 .button--suggest:hover::before {
   transform: translate3d(0,-100%,0);
 }
+
+.md-content {
+  h1,
+  h2,
+  h3,
+  p,
+  ul,
+  ol {
+    display: block;
+    margin: 1em 0;
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+    line-height: 1.5;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 21px;
+  }
+
+  h3 {
+    font-size: 18px;
+  }
+
+  p,
+  ol,
+  ul {
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  strong {
+    font-weight: 600;
+  }
+}
